data/all_generated_tests/raw_wast_tests/if_TypeMismatchinControlFlowInstructions_1940.wast
;; If you want to create effective delineation of test cases for identifying implementation variances between two different WebAssembly validators, especially focused on type mismatch in control flow instructions, here are 10 differential tests in natural language format:  1. An `if` instruction that incorrectly assumes an `i64` input type instead of the required `i32`, leading to a stack type mismatch when evaluating the condition.

(assert_invalid
  (module (func $type-condition-i64 (param i64)
    (if (local.get 0) (then) (else))
  ))
  "type mismatch"
)